<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/change_password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_change_password"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_current_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_change_password"
        android:layout_marginTop="100dp"
        app:passwordToggleDrawable="@drawable/ic_show_password"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@null"
        app:boxStrokeWidth="0dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Current password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:background="@drawable/edittext_border"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_new_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_current_password"
        android:layout_marginTop="16dp"
        app:passwordToggleDrawable="@drawable/ic_show_password"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@null"
        app:boxStrokeWidth="0dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="New password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:background="@drawable/edittext_border"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_confirm_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_new_password"
        android:layout_marginTop="16dp"
        app:passwordToggleDrawable="@drawable/ic_show_password"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@null"
        app:boxStrokeWidth="0dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Confirm password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:background="@drawable/edittext_border"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:text="Save changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_confirm_password"
        android:layout_marginTop="65dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>