<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ic_chats"
        android:title=""
        android:icon="@drawable/ic_chats"/>

    <item
        android:id="@+id/placeholder"
        android:title=""/>

    <item
        android:id="@+id/ic_account"
        android:title=""
        android:icon="@drawable/ic_account"/>
</menu>