<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/toolbar_create_event"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/purple"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="73dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="196dp"
        android:layout_height="34dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/action_create_event"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_create_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar_create_event"
        app:layout_constraintTop_toTopOf="@+id/toolbar_create_event" />

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_border"
        android:paddingHorizontal="17dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/place"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_border"
        android:paddingHorizontal="17dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_border"
        android:paddingHorizontal="17dp"
        android:textColor="#585858"
        android:textSize="14sp"
        android:focusableInTouchMode = "false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="45dp"
        android:layout_height="18dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/place"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.402"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="45dp"
        android:layout_height="18dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/date"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place"
        app:layout_constraintVertical_bias="0.41"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="35dp"
        android:layout_height="18dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_create_event"
        app:layout_constraintVertical_bias="0.313"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/addMembers"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_purple"
        android:text="@string/action_add_members"
        android:textColor="#fff"
        android:textSize="16sp"
        app:icon="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <Button
        android:id="@+id/create"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:background="@drawable/btn_green"
        android:text="@string/action_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.734" />


    <TextView
        android:id="@+id/n_members_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_members"
        app:layout_constraintBottom_toTopOf="@+id/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.72" />



</androidx.constraintlayout.widget.ConstraintLayout>